Create separate public and internal javadoc sites, refactor rdbmsType to DatabaseType and move to public api