@@ -145,26 +145,95 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <version>${maven-javadoc.version}</version>
-                <configuration>
-                    <additionalOptions>
-                        <additionalOption>--add-reads</additionalOption>
-                        <additionalOption>db.documenter=ALL-UNNAMED</additionalOption>
-                    </additionalOptions>
-                </configuration>
                 <executions>
+                    <!-- Public API Documentation -->
                     <execution>
-                        <id>generate-html-docs</id>
+                        <id>public-api-docs</id>
                         <phase>verify</phase>
                         <goals>
                             <goal>javadoc</goal>
                         </goals>
+                        <configuration>
+                            <outputDirectory>${project.build.directory}/site/apidocs</outputDirectory>
+                            <excludePackageNames>db.documenter.internal.*</excludePackageNames>
+                            <additionalOptions>
+                                <additionalOption>--add-reads</additionalOption>
+                                <additionalOption>db.documenter=ALL-UNNAMED</additionalOption>
+                            </additionalOptions>
+                        </configuration>
                     </execution>
+                    <!-- Internal/Contributor Documentation -->
+                    <execution>
+                        <id>internal-docs</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>javadoc</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>${project.build.directory}/site/internal-apidocs</outputDirectory>
+                            <show>private</show>
+                            <sourcepath>${project.build.sourceDirectory}</sourcepath>
+                            <subpackages>db.documenter</subpackages>
+                            <additionalOptions>
+                                <additionalOption>--add-reads</additionalOption>
+                                <additionalOption>db.documenter=ALL-UNNAMED</additionalOption>
+                                <additionalOption>--add-exports</additionalOption>
+                                <additionalOption>db.documenter/db.documenter.internal.api=ALL-UNNAMED</additionalOption>
+                                <additionalOption>--add-exports</additionalOption>
+                                <additionalOption>db.documenter/db.documenter.internal.builder=ALL-UNNAMED</additionalOption>
+                                <additionalOption>--add-exports</additionalOption>
+                                <additionalOption>db.documenter/db.documenter.internal.connection=ALL-UNNAMED</additionalOption>
+                                <additionalOption>--add-exports</additionalOption>
+                                <additionalOption>db.documenter/db.documenter.internal.connection.api=ALL-UNNAMED</additionalOption>
+                                <additionalOption>--add-exports</additionalOption>
+                                <additionalOption>db.documenter/db.documenter.internal.connection.impl=ALL-UNNAMED</additionalOption>
+                                <additionalOption>--add-exports</additionalOption>
+                                <additionalOption>db.documenter/db.documenter.internal.connection.impl.postgresql=ALL-UNNAMED</additionalOption>
+                                <additionalOption>--add-exports</additionalOption>
+                                <additionalOption>db.documenter/db.documenter.internal.exceptions=ALL-UNNAMED</additionalOption>
+                                <additionalOption>--add-exports</additionalOption>
+                                <additionalOption>db.documenter/db.documenter.internal.impl=ALL-UNNAMED</additionalOption>
+                                <additionalOption>--add-exports</additionalOption>
+                                <additionalOption>db.documenter/db.documenter.internal.mapper=ALL-UNNAMED</additionalOption>
+                                <additionalOption>--add-exports</additionalOption>
+                                <additionalOption>db.documenter/db.documenter.internal.models.db=ALL-UNNAMED</additionalOption>
+                                <additionalOption>--add-exports</additionalOption>
+                                <additionalOption>db.documenter/db.documenter.internal.models.doc=ALL-UNNAMED</additionalOption>
+                                <additionalOption>--add-exports</additionalOption>
+                                <additionalOption>db.documenter/db.documenter.internal.queries=ALL-UNNAMED</additionalOption>
+                                <additionalOption>--add-exports</additionalOption>
+                                <additionalOption>db.documenter/db.documenter.internal.queries.api=ALL-UNNAMED</additionalOption>
+                                <additionalOption>--add-exports</additionalOption>
+                                <additionalOption>db.documenter/db.documenter.internal.queries.impl.postgresql=ALL-UNNAMED</additionalOption>
+                                <additionalOption>--add-exports</additionalOption>
+                                <additionalOption>db.documenter/db.documenter.internal.queries.impl.postgresql.preparedstatements=ALL-UNNAMED</additionalOption>
+                                <additionalOption>--add-exports</additionalOption>
+                                <additionalOption>db.documenter/db.documenter.internal.queries.impl.postgresql.resultsets=ALL-UNNAMED</additionalOption>
+                                <additionalOption>--add-exports</additionalOption>
+                                <additionalOption>db.documenter/db.documenter.internal.renderer.api=ALL-UNNAMED</additionalOption>
+                                <additionalOption>--add-exports</additionalOption>
+                                <additionalOption>db.documenter/db.documenter.internal.renderer.impl=ALL-UNNAMED</additionalOption>
+                                <additionalOption>--add-exports</additionalOption>
+                                <additionalOption>db.documenter/db.documenter.internal.utils=ALL-UNNAMED</additionalOption>
+                                <additionalOption>--add-exports</additionalOption>
+                                <additionalOption>db.documenter/db.documenter.internal.validation=ALL-UNNAMED</additionalOption>
+                            </additionalOptions>
+                        </configuration>
+                    </execution>
+                    <!-- Javadoc JAR for Maven Central -->
                     <execution>
                         <id>attach-javadoc-jar</id>
                         <phase>package</phase>
                         <goals>
                             <goal>jar</goal>
                         </goals>
+                        <configuration>
+                            <excludePackageNames>db.documenter.internal.*</excludePackageNames>
+                            <additionalOptions>
+                                <additionalOption>--add-reads</additionalOption>
+                                <additionalOption>db.documenter=ALL-UNNAMED</additionalOption>
+                            </additionalOptions>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
